--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,5 +1,8 @@
 es:
-  hello: "Hola world"
-  time:
-    formats:
-      submitted: "%d/%m/%Y"
+ time:
+   am: am
+   formats:
+     default: ! '%a, %d de %b de %Y a las %H:%M:%S %Z'
+     long: ! '%A, %d de %B de %Y a las %I:%M %p'
+     short: ! '%d de %b a las %H:%M hrs'
+     pm: pm
