--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -27,3 +27,10 @@ es:
       default: ! '%A, %d de %B de %Y %H:%M:%S %z'
       long: ! '%d/%m/%Y - %H:%M'
       short: ! '%d de %b %H:%M'
+  activerecord:
+    models:
+      customer: Clientes
+    attributes:
+      customer:
+        name: Nombre
+        lastname: Apellido
