--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -24,9 +24,9 @@ es:
   time:
     formats:
       submitted: "%d/%m/%Y"
-      default: ! '%A, %d de %B de %Y %H:%M:%S %z'
-      long: ! '%d/%m/%Y - %H:%M'
-      short: ! '%d de %b %H:%M'
+      default:  '%A, %d de %B de %Y %H:%M:%S %z'
+      long:  '%d/%m/%Y - %H:%M'
+      short:  '%d de %b %H:%M'
   activerecord:
     errors:
       models:
