--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -27,6 +27,61 @@ es:
       default:  '%A, %d de %B de %Y %H:%M:%S %z'
       long:  '%d/%m/%Y - %H:%M'
       short:  '%d de %b %H:%M'
+  date:
+    abbr_day_names:
+      - dom
+      - lun
+      - mar
+      - mié
+      - jue
+      - vie
+      - sáb
+    abbr_month_names:
+      -
+      - ene
+      - feb
+      - mar
+      - abr
+      - may
+      - jun
+      - jul
+      - ago
+      - sep
+      - oct
+      - nov
+      - dic
+    day_names:
+      - domingo
+      - lunes
+      - martes
+      - miércoles
+      - jueves
+      - viernes
+      - sábado
+    month_names:
+      -
+      - enero
+      - febrero
+      - marzo
+      - abril
+      - mayo
+      - junio
+      - julio
+      - agosto
+      - septiembre
+      - octubre
+      - noviembre
+      - diciembre
+    formats:
+      default: ! '%d/%m/%Y'
+      long: ! '%d de %B de %Y'
+      short: ! '%d de %b'
+
+    order:
+      - :day
+      - :month
+      - :year
+
   activerecord:
     errors:
       models:
@@ -48,6 +103,7 @@ es:
         supplier: "Proveedor"
         price_total: "Precio Publico"
         quantity: "Stock"
+        due_date: "Fecha Vencimiento"
       user:
         name: "Nombre"
         email: "Correo Electronico"
